font fix dark mode

--- a/src/app/shared/components/navbar/navbar.css
+++ b/src/app/shared/components/navbar/navbar.css
@@ -228,6 +228,7 @@ a.active {
   gap: 8px;
   font-size: 16px;
   font-family: var(--font-primary);
+  color: var(--font-colour);
 }
 
 .drawer-theme-btn::after {
